feat: associate procedure model to events (#105)
* instanciate new procedure with events
* events can't be DONE or already associated
* update status event to IN_PROGRESS
* increment procedure model useCount
* fix procedure model list : return empty list when domain filter is empty
* add description property in Procedure
